# cooking.rs

./: Cargo.toml  Cargo.toml~  README.md  cook_effects.json  cook_items.json  cook_recipes.json  cook_tags.json  names.json  t
scripts/: clean_data.py
src/: cook_effects.json  cook_items.json  cook_tags.json  lib.rs  modifier.rs  names.json  wmc.rs
t/: acorns.json  dubious.json  elixirs.json  fruitcake.json  ist.json  other.json  quietness.json  wkr.json
tests/: cook_dye_and_picture.rs
