[package]
name = "cooking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
thiserror = "1.0.50"

[lib]
name = "cooking"
path = "src/lib.rs"

[[bin]]
name = "cooking"
path = "src/cli.rs"
